Add a placeholder for the TM fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>A whale of greeting</title>
+  <!-- Add something here to fix the trademark -->
 </head>
 <body>
   <h1>hello, world</h1>
